# sqlite_orm_lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  vscode-include-fix.py
cmake/: SolCMakeFunctions.cmake
sol/: CMakeLists.txt  logger.h  serialize_base.h  serialize_base_test.cc  serialize_template.h  serialize_template_test.cc  sql_constructor.h  sql_constructor_build_cache.h  sql_constructor_builder.h  sql_constructor_builder_test.cc  sql_constructor_test.cc  sqlite_file.h  sqlite_file_test.cc  sqlite_flie.cc  sqlite_struct_info.h  sqlite_struct_info_build_cache.h  sqlite_struct_info_builder.h  sqlite_struct_info_builder_test.cc  sqlite_struct_info_test.cc
sol/utils/: CMakeLists.txt  magic.h  magic_test.cc  str_utils.h  str_utils_test.cc
sol/utlis/: magic.h
